structures save to world, fixes #1346, attempt to fix biome and dimension recreation, but the other ones need more testing.